@@ -1,6 +1,8 @@
 Revision history for WWW-Kickstarter
 
 1.12.0  ~~~~-~~-~~
+        - The values of the goal and pledged queries were changed in the 
+          Kickstarter API. Adjusted the validation checks and documentation.
         - Minor markup fixes in the documentation.
         - ~~~
 
